--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.100"
-axum = "0.8.7"
+axum = { version = "0.8.7", features = ["macros"] }
 rstest = "0.26.1"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = { version = "1.0.145", features = ["preserve_order"] }
@@ -14,6 +14,7 @@ tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
 tracing = "0.1.40"
 include_dir = "0.7.4"
 mime_guess = "2.0.5"
+thiserror = "2.0.17"
 
 [dev-dependencies]
 http-body-util = "0.1.2"
