--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,19 @@ axum = { version = "0.8.7", features = ["macros"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = { version = "1.0.145", features = ["preserve_order"] }
 tower = "0.5.1"
-tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
 tracing = "0.1.40"
 include_dir = "0.7.4"
 mime_guess = "2.0.5"
 thiserror = "2.0.17"
 
 [dev-dependencies]
+# dependencies for examples and tests
 http-body-util = "0.1.2"
 pretty_assertions = "1.4.1"
-# rstest = "0.26.1"
+tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
+reqwest = { version = "0.12.24", features = [ # don't bring in openssl
+    "charset",
+    "system-proxy",
+], default-features = false }
+html-escape = "0.2.13"
