--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ thiserror = "2.0.17"
 
 [dev-dependencies]
 # dependencies for examples and tests
+chrono = "0.4.42"
 http-body-util = "0.1.2"
 pretty_assertions = "1.4.1"
 tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
