--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ anyhow = "1.0.100"
 axum = { version = "0.8.7", features = ["macros"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = { version = "1.0.145", features = ["preserve_order"] }
+tokio = { version = "1.48.0", features = ["signal"] }
 tower = "0.5.1"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
@@ -23,6 +24,7 @@ thiserror = "2.0.17"
 chrono = "0.4.42"
 http-body-util = "0.1.2"
 pretty_assertions = "1.4.1"
+rstest = "0.26.1"
 tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
 reqwest = { version = "0.12.24", features = [ # don't bring in openssl
     "charset",
