--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,11 @@ authors = [
     "Anthony Rubick <68485672+AnthonyMichaelTDM@users.noreply.github.com>",
 ]
 edition = "2024"
+license = "AGPL-3.0 and MIT"
+repository = "https://github.com/aroz-online/zoraxy-rs"
+categories = ["plugin", "web-server"]
+homepage = "https://zoraxy.aroz.org/"
+
 
 [dependencies]
 anyhow = "1.0.100"
