fix: add description field to Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = [
     "Anthony Rubick <68485672+AnthonyMichaelTDM@users.noreply.github.com>",
 ]
+description = "A Rust crate for building plugins for the Zoraxy Reverse Proxy"
 edition = "2024"
 license = "AGPL-3.0 and MIT"
 repository = "https://github.com/aroz-online/zoraxy-rs"
